tests/codegen/fail/interface/trait/non_subtype_return.stderr
error[E0080]: evaluation of constant value failed
  --> fail/interface/trait/non_subtype_return.rs:11:8
   |
11 |     fn id(&self) -> &str;
   |        ^^ the evaluated program panicked at 'Failed to implement interface `Character` on `ObjA`: Field `id`: implementor is expected to return a subtype of interface's return object: `[String!]!` is not a subtype of `String!`.', $DIR/fail/interface/trait/non_subtype_return.rs:11:8
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `::juniper::assert_field` (in Nightly builds, run with -Z macro-backtrace for more info)
